--- a/src/app.css
+++ b/src/app.css
@@ -69,6 +69,10 @@
 
 		--ring: hsl(212.7, 26.8%, 83.9);
 	}
+
+	.post-titles {
+		@apply text-lg font-semibold hover:underline hover:decoration-lime-500 hover:decoration-4 hover:underline-offset-2;
+	}
 }
 
 @layer base {
