--- a/src/app.css
+++ b/src/app.css
@@ -71,12 +71,12 @@
 		--ring: hsl(212.7, 26.8%, 83.9);
 	}
 
-	.post-titles {
+	/* .post-titles {
 		@apply hover:underline hover:decoration-orange-400 hover:decoration-2 hover:underline-offset-4;
-	}
+	} */
 
-	.project-header {
-		@apply underline decoration-2 underline-offset-4 hover:decoration-orange-400;
+	.project-header, .post-titles {
+		@apply underline decoration-orange-400 decoration-2 underline-offset-4 hover:decoration-yellow-300 active:decoration-yellow-300;
 	}
 
 	/* Code for Shiki highlighting */
